--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,6 +1,7 @@
 twig:
     default_path: '%kernel.project_dir%/templates'
-
+    globals: 
+        author: Code With Phil
 when@test:
     twig:
         strict_variables: true
