--- a/.env
+++ b/.env
@@ -24,6 +24,7 @@ APP_SECRET=d5cac185b4c6d77aaf7125a588bcaee0
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/movies?serverVersion=mariadb-10.4.24"
+# DATABASE_URL="mysql://root:@127.0.0.1:3306/movies?serverVersion=mariadb-10.4.24"
+DATABASE_URL="mysql://baca12fa6f07eb:b2454d81@eu-cdbr-west-03.cleardb.net/heroku_4be63c8686a608c?reconnect=true"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
